# makrell-omni

./: .gitattributes  .gitignore  AGENTS.md  README.md  SESSION_NOTES.md
.claude/: settings.local.json
.github/workflows/: ts-m0.yml
docs/: compile-time-parity-review.md  conformance-review.md  consolidation-plan.md  debug-information-and-source-mapping.md  documentation-todo.md  editor-support-audit.md  feature-status-matrix.md  format-sdk-expansion.md  language-documentation-guide.md  publishing-playbook.md  release-smoke-suite.md  v0.10.0-release-notes.md  v0.10.0-release-plan.md  vision-notes-2.md  vision-notes.md
docs/playground-notes/: features.rst  implementation.rst  index.rst  responsive.rst  states.rst
impl/c/: CMakeLists.txt  README.md
impl/c/examples/: basic.c
impl/c/include/: makrell_formats.h
impl/c/src/: makrell_formats.c
impl/c/tests/: smoke.c
impl/cpp/: CMakeLists.txt  README.md
impl/cpp/examples/: basic.cpp
impl/cpp/include/: makrell_formats.hpp
impl/cpp/src/: makrell_formats.cpp
impl/cpp/tests/: smoke.cpp
impl/dart/: README.md  pubspec.yaml
impl/dotnet/: Directory.Build.props  MAKRELLSHARP_PLAN.md  MakrellSharp.sln  NUGET_README.md  PACKAGING.md  README.md
impl/go/: README.md  basic_suffix_profile.go  formats.go  formats_test.go  go.mod
impl/haskell/: README.md  makrell-formats.cabal  stack.yaml
impl/haskell/app/: Main.hs
impl/haskell/src/Makrell/: Formats.hs
impl/haskell/test/: Spec.hs
impl/jvm/: README.md  build.gradle.kts  gradle.properties.example  settings.gradle.kts
impl/lua/: README.md  makrell-formats-dev-1.rockspec  makrell_formats.lua
impl/perl/: LICENSE  Makefile.PL  README.md
impl/php/: README.md  composer.json
impl/py/: README.md  pyproject.toml  setup.py
impl/r/: DESCRIPTION  NAMESPACE  README.md
impl/ruby/: README.md  makrell-formats.gemspec
impl/rust/: Cargo.toml  README.md
impl/rust/examples/: basic_usage.rs
impl/rust/src/: basic_suffix_profile.rs  error.rs  lib.rs  mini_mbf.rs  mrml.rs  mron.rs  mrtd.rs
impl/rust/tests/: api_smoke.rs
impl/ts/: COMPATIBILITY.md  IMPORT_MODEL.md  README.md  REFERENCE_PLAN.md  package.json  tsconfig.json  tsconfig.typecheck.json
makrell.dev/: dev_server.py
makrell.dev/scripts/: build-site-with-playground.py  serve-no-cache.py  sync-playground-runtime.mjs
makrell.dev/source/: base-format.rst  conf.py  getting-started.rst  index.rst  mrml.rst  mron.rst  mrtd.rst
playground/: build.mjs  package.json  tsconfig.json
playground/src/: docs.ts  editor.ts  index.html  main.ts  styles.css
scripts/release/: setup-fresh-vscode-smoke-env.mjs  verify-publish.mjs
shared/format-fixtures/: README.md
shared/makrell-editor-assets/: README.md  language-configuration.json
skills/: README.md
skills/makrell-run/: SKILL.md
specs/: async-model.md  main-spec.md  makrellpy-spec.md  makrellsharp-spec.md  mbf-spec.md  mrml-spec.md  mron-spec.md  mrtd-spec.md  portability-model.md
vscode-makrell/: .vscodeignore  PUBLISHING.md  README.md  package.json  tsconfig.json
(+360 files in other folders)
