cabal-version:      2.4
name:               makrell-formats
version:            0.10.0.0
build-type:         Simple
license:            MIT
license-file:       LICENSE
author:             Makrell
maintainer:         info@makrell.dev
category:           Data
synopsis:           MRON, MRML, and MRTD support for Haskell

library
  hs-source-dirs:      src
  exposed-modules:     Makrell.Formats
  default-language:    Haskell2010
  build-depends:       base >=4.14 && <5, containers

executable makrell-formats-example
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, makrell-formats

test-suite makrell-formats-smoke
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base, makrell-formats, containers
