[package]
name = "makrell-formats"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "MRON, MRML, and MRTD support for Rust."
homepage = "https://makrell.dev"
repository = "https://github.com/hcholm/makrell-omni"
readme = "README.md"
keywords = ["makrell", "mron", "mrml", "mrtd"]
categories = ["parser-implementations", "encoding"]

[lib]
name = "makrell_formats"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
